# scubature

./: .gitignore  CHANGELOG.md  README.md  scubature.cabal  stack.yaml
src/Numeric/Integration/: IntegratePolynomialOnSimplex.hs  SimplexCubature.hs  SphericalSimplexCubature.hs
src/Numeric/Integration/Simplex/: Simplex.hs
src/Numeric/Integration/SimplexCubature/: Examples.hs  Internal.hs
src/Numeric/Integration/SphericalSimplexCubature/: Examples.hs  Internal.hs  InternalVector.hs
