name:                scubature
version:             1.0.0.0
synopsis:            Multidimensional integration over simplices
description:         This library allows to evaluate integrals over Euclidean and spherical simplices.
homepage:            https://github.com/stla/scubature#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@outlook.fr
copyright:           2022 Stéphane Laurent
category:            Numeric, Integration
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.Integration.SimplexCubature
                     , Numeric.Integration.SphericalSimplexCubature
  other-modules:       Numeric.Integration.SimplexCubature.Internal
                     , Numeric.Integration.Simplex.Simplex
                     , Numeric.Integration.SphericalSimplexCubature.Internal
  other-extensions:    BangPatterns
                     , DuplicateRecordFields
  build-depends:       base >= 4.7 && < 5
                     , combinat
                     , array
                     , vector
                     , matrix
                     , containers
                     , ilist
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

source-repository head
  type:     git
  location: https://github.com/stla/scubature
