name:                scubature
version:             1.1.0.0
synopsis:            Multidimensional integration over simplices
description:         This library allows to evaluate integrals over Euclidean and spherical simplices.
homepage:            https://github.com/stla/scubature#readme
license:             GPL-3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@outlook.fr
copyright:           2022 Stéphane Laurent
category:            Numeric, Integration
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.Integration.SimplexCubature
                     , Numeric.Integration.SphericalSimplexCubature
                     , Numeric.Integration.IntegratePolynomialOnSimplex
  other-modules:       Numeric.Integration.SimplexCubature.Internal
                     , Numeric.Integration.Simplex.Simplex
                     , Numeric.Integration.SphericalSimplexCubature.Internal
  other-extensions:    BangPatterns
                     , DuplicateRecordFields
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5.4.0
                     , vector >= 0.12.3.1
                     , matrix >= 0.3.6.1
                     , containers >= 0.6.4.1
                     , ilist >= 0.4.0.1
                     , hspray >= 0.1.1.0
                     , numeric-prelude >= 0.4.4
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/stla/scubature
